--- a/style/log-in.css
+++ b/style/log-in.css
@@ -1,52 +1,84 @@
-body, html {
-    height: 100%;
-    height: 100%;
-    background-image: url("images/pexels-tirachard-kumtanom-601177.jpg"); /* This photo by Tirachard Kumtanom from Pexels */
-    background-repeat: no-repeat; 
-    background-size: cover; 
-    position: relative;
-    min-height: 380px; 
-  
+body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Lucida Sans';
+      background: url();
+      background-size: cover;
   }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  .container {
+
+  .box {
+    width: 300px;
+    padding: 30px;
     position: absolute;
-    right: 0;
-    margin: 20px;
-    max-width: 300px;
-    padding: 16px;
-    background-color: white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background: rgba(0,0.0,0.4);
+    text-align: center;
   }
-  
-    input[type=text], input[type=password] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    border: none;
-    background: #f1f1f1;
-  }
-  
-  input[type=text]:focus, input[type=password]:focus {
-    background-color: #ddd;
-    outline: none;
-  }
-  
-  .btn {
-    background-color: #4CAF50;
+
+  .box h1 {
     color: white;
-    padding: 16px 20px;
-    border: none;
+    text-transform: uppercase;
+    font-weight: 700;
+  }
+
+  .box input[type="text"] {
+      border: 0;
+      background: none;
+      display: block;
+      margin: 20px auto;
+      text-align: center;
+      border: 3px solid #0367fd;
+      padding: 14px 10px;
+      width: 220px;
+      outline:  none;
+      color: white;
+      border-radius: 24px;
+      transition: 0.25px;
+  }
+
+  .box input[type="text"]:focus{
+    width: 270px;
+    border-color: #ffc400ec;
+  }
+
+  .box input [type="password"]{
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 3px solid #0367fd;
+    padding: 14px 10px;
+    width: 220px;
+    outline:  none;
+    color: white;
+    border-radius: 24px;
+    transition: 0.25px;
+  }
+  
+  .box input [type="password"]:focus {
+    width: 270px;
+    border-color: #ffc400ec;
+  }
+
+  .box input[type="submit"] {
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 3px solid #0367fd;
+    padding: 14px 10px;
+    outline: none;
+    color: white;
+    border-radius: 24px;
+    transition: 0.25px;
     cursor: pointer;
-    width: 100%;
-    opacity: 0.9;
-  }
-  
-  .btn:hover {
-    opacity: 1;
-  }
-  
-  
+    }
+
+    .box input[type="submit"]:hover {
+      border-color: #ffc400ec;
+
+    }
