--- a/style/log-in.css
+++ b/style/log-in.css
@@ -2,7 +2,7 @@ body {
       margin: 0;
       padding: 0;
       font-family: 'Lucida Sans';
-      background: url();
+      background: url(images/pexels-rakicevic-nenad-1274260.jpg); /* Photo by Rakicevic Nenad from Pexels */
       background-size: cover;
   }
 
@@ -13,7 +13,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    background: rgba(0,0.0,0.4);
+    background: rgba(121, 121, 121, 0.363);
     text-align: center;
   }
 
@@ -32,7 +32,7 @@ body {
       border: 3px solid #0367fd;
       padding: 14px 10px;
       width: 220px;
-      outline:  none;
+      outline: none;
       color: white;
       border-radius: 24px;
       transition: 0.25px;
@@ -69,7 +69,7 @@ body {
     display: block;
     margin: 20px auto;
     text-align: center;
-    border: 3px solid #0367fd;
+    border: 3px solid #ffc400ec;
     padding: 14px 10px;
     outline: none;
     color: white;
@@ -79,6 +79,6 @@ body {
     }
 
     .box input[type="submit"]:hover {
-      border-color: #ffc400ec;
+      border-color: #0367fd;
 
     }
