--- a/khaproject/index1.css
+++ b/khaproject/index1.css
@@ -3,10 +3,12 @@
     padding: 0;
     font-family: serif;
 }
-.container{
+
+.container {
     display: grid;
 }
-.myheader{
+
+.myheader {
     position: sticky;
     top: 0;
     z-index: 10;
@@ -15,7 +17,8 @@
     display: flex;
     align-items: stretch;
 }
-.banner{
+
+.banner {
     background-color: black;
     text-align: center;
     color: white;
@@ -23,13 +26,15 @@
     padding: 10px;
     font-weight: bold;
 }
-#logo{
+
+#logo {
     width: 180px;
     height: 180px;
     float: left;
     position: relative;
 }
-.logo{
+
+.logo {
     flex-grow: 1;
 }
 
@@ -43,6 +48,7 @@
     flex-grow: 2;
     margin: auto;
 }
+
 .header {
     background-color: #fff;
     justify-content: space-around;
@@ -53,11 +59,12 @@
     margin: auto;
 }
 
-.bigimage,img{
+.bigimage,
+img {
     width: auto;
     height: 600px;
-    
 }
+
 .text {
     color: #f2f2f2;
     font-size: 15px;
@@ -67,14 +74,19 @@
     width: 100%;
     text-align: right;
 }
-.prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
 }
+
 .next {
     right: 0;
     border-radius: 3px 0 0 3px;
 }
-.prev, .next {
+
+.prev,
+.next {
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -88,36 +100,48 @@
     border-radius: 0 3px 3px 0;
     user-select: none;
 }
+
 .slideshow {
     position: relative;
     margin: auto;
 }
+
 .fade {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
     animation-duration: 1.5s;
 }
-  
+
 @-webkit-keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
 }
-  
+
 @keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
 }
 
 ul {
     list-style-type: none;
 }
-  
+
 li {
     float: left;
 }
-  
-li a,select,button {
+
+li a,
+select,
+button {
     display: block;
     color: black;
     text-align: center;
@@ -126,14 +150,14 @@ li a,select,button {
     background-color: white;
     border: none;
 }
-  
+
 li a:hover:not(.active) {
     background-color: lightgrey;
 }
 
 body {
     background-color: #fff;
-} 
+}
 
 .open-button {
     background-color: rgb(13, 94, 170);
@@ -149,8 +173,10 @@ body {
     border-radius: 20px;
     font-size: 16px;
 }
-  
+
+
 /* The popup chat - hidden by default */
+
 .chat-popup {
     display: none;
     position: fixed;
@@ -159,15 +185,19 @@ body {
     border: 3px solid #f1f1f1;
     z-index: 9;
 }
-  
-  /* Add styles to the form container */
-  .form-container {
+
+
+/* Add styles to the form container */
+
+.form-container {
     max-width: 300px;
     padding: 10px;
     background-color: white;
 }
-  
+
+
 /* Full-width textarea */
+
 .form-container textarea {
     width: 80%;
     padding: 15px;
@@ -177,14 +207,18 @@ body {
     resize: none;
     min-height: 200px;
 }
-  
+
+
 /* When the textarea gets focus, do something */
-  .form-container textarea:focus {
+
+.form-container textarea:focus {
     background-color: #ddd;
     outline: none;
 }
-  
+
+
 /* Set a style for the submit/send button */
+
 .form-container .btn {
     background-color: #4CAF50;
     color: white;
@@ -192,16 +226,136 @@ body {
     border: none;
     cursor: pointer;
     width: 100%;
-    margin-bottom:10px;
+    margin-bottom: 10px;
     opacity: 0.8;
 }
-  
+
+
 /* Add a red background color to the cancel button */
+
 .form-container .cancel {
     background-color: red;
 }
-  
+
+
 /* Add some hover effects to buttons */
-.form-container .btn:hover, .open-button:hover {
+
+.form-container .btn:hover,
+.open-button:hover {
     opacity: 1;
+}
+
+
+/* 
+Tariq Ali Changes 
+*/
+
+.categories {
+    text-align: center;
+    padding: 20px;
+    margin: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.categories div {
+    border: 1px solid black;
+    padding: 10px;
+    border-radius: 30px;
+}
+
+.prodSize {
+    width: auto;
+    height: auto;
+}
+
+ul li ul li {
+    list-style-type: none;
+    display: none;
+}
+
+ul li:hover ul li {
+    list-style-type: none;
+    display: block;
+}
+
+.card {
+    position: relative;
+    overflow: hidden;
+}
+
+.card:before {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 220%;
+    top: -50%;
+    left: -100%;
+    z-index: 1;
+    background-color: rgba(61, 230, 108, 0.387);
+    transform: rotate(0deg);
+    transform-origin: center top 2;
+    transition: .5s;
+}
+
+.card:hover::before {
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+}
+
+.card img {
+    width: 100%;
+    height: auto;
+}
+
+.card-text {
+    width: 100%;
+    padding: 0 20px;
+    position: absolute;
+    top: -100%;
+    background-color: rgba(255, 255, 255, 0.592);
+    color: rgb(8, 1, 1);
+    left: 0;
+    z-index: 1;
+    transition: 1.1s;
+}
+
+.card:hover .card-text {
+    top: 100px;
+}
+
+.btn-success:hover {
+    background-color: rgb(189, 90, 90);
+    color: chocolate;
+}
+
+.blink {
+    animation-name: blinker;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+.blink:hover {
+    animation-play-state: paused;
+    cursor: pointer;
+}
+
+.spanBlink {
+    font-size: 20px;
+    background-color: rgba(61, 230, 108, 0.387);
+}
+
+@keyframes blinker {
+    0% {
+        opacity: 1.0;
+    }
+    50% {
+        opacity: 0.0;
+    }
+    100% {
+        opacity: 1.0;
+    }
 }
