--- a/khaproject/index1.css
+++ b/khaproject/index1.css
@@ -61,17 +61,78 @@
 .logo{
     flex-grow: 1;
 }
-.subheader {
-    background-color: #fff;
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 15px;
-}
 .header {
     background-color: #fff;
     font-family: Helvetica, Arial, sans-serif;
     font-size: 20px;
     flex-grow: 1;
 }
+.subheader {
+    background-color: #fff;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 15px;
+}
+.searchArea{
+    padding-top: 30px;
+}
+#searchForm{
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    transition: all 1s;
+    width: 50px;
+    height: 50px;
+    background: white;
+    box-sizing: border-box;
+    border-radius: 25px;
+    border: 4px solid white;
+    padding: 5px;
+}
+input{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;;
+    height: 42.5px;
+    line-height: 30px;
+    outline: 0;
+    border: 1px solid orange;
+    display: none;
+    font-size: 1em;
+    border-radius: 20px;
+    padding: 0 20px;
+}
+
+.fa{
+    box-sizing: border-box;
+    padding: 10px;
+    width: 42.5px;
+    height: 42.5px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 50%;
+    color: #07051a;
+    text-align: center;
+    font-size: 1.2em;
+    transition: all 1s;
+}
+
+#searchForm:hover{
+    width: 200px;
+    cursor: pointer;
+}
+
+#searchForm:hover input{
+    display: block;
+}
+
+#searchForm:hover .fa{
+    background: #07051a;
+    color: white;
+}
+
 .bigimage{
     width: 1365px;
     height: 800px;
