--- a/khaproject/index1.css
+++ b/khaproject/index1.css
@@ -13,7 +13,7 @@
     align-items: center;
     width: 100%;  
     margin: auto;
-    justify-self: stretch;
+    justify-content: space-between;
 }
 .stickyheader{
     position: sticky;
@@ -53,8 +53,8 @@
     padding: 0;
 }
 #logo{
-    width: 100px;
-    height: 100px;
+    width: 140px;
+    height: 120px;
     float: left;
     position: relative;
 }
