--- a/khaproject/index1.css
+++ b/khaproject/index1.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: Helvetica,Arial,  sans-serif;
+    width: 100%;
 }
 .container{
     display: grid;
@@ -9,11 +10,9 @@
 }
 .myheader{
     background-color: #fff;
-    display: flex;
-    align-items: center;
     width: 100%;  
-    margin: auto;
-    justify-content: space-between;
+    align-items: center;
+    display: inline-flex;
 }
 .stickyheader{
     position: sticky;
@@ -55,25 +54,29 @@
 #logo{
     width: 140px;
     height: 120px;
-    float: left;
-    position: relative;
 }
 .logo{
-    flex-grow: 1;
+    width: 20%;
 }
 .header {
     background-color: #fff;
     font-family: Helvetica, Arial, sans-serif;
     font-size: 20px;
-    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    width: 45%;
 }
 .subheader {
+    align-items: center;
     background-color: #fff;
     font-family: Helvetica, Arial, sans-serif;
     font-size: 15px;
+    display: flex;
+    width: 15%;
 }
 .searchArea{
-    padding-top: 30px;
+    padding-top: 50px;
+    width: 20%;
 }
 #searchForm{
     position: relative;
@@ -83,13 +86,13 @@
     transition: all 1s;
     width: 50px;
     height: 50px;
-    background: white;
+    background-color: white;
     box-sizing: border-box;
     border-radius: 25px;
     border: 4px solid white;
     padding: 5px;
 }
-input{
+#searchinput{
     position: absolute;
     top: 0;
     left: 0;
@@ -103,7 +106,6 @@ input{
     border-radius: 20px;
     padding: 0 20px;
 }
-
 .fa{
     box-sizing: border-box;
     padding: 10px;
@@ -118,33 +120,32 @@ input{
     font-size: 1.2em;
     transition: all 1s;
 }
-
 #searchForm:hover{
     width: 200px;
     cursor: pointer;
 }
-
 #searchForm:hover input{
     display: block;
 }
-
 #searchForm:hover .fa{
     background: #07051a;
     color: white;
 }
-
 .bigimage{
-    width: 1365px;
-    height: 800px;
+    width: 100%;
+    height: auto;
 }
 .text {
     color: #f2f2f2;
-    font-size: 15px;
+    font-size:16px;
     padding: 8px 12px;
     position: absolute;
     bottom: 8px;
-    width: 100%;
+    width: 96%;
     text-align: right;
+}
+.text a{
+    color: white
 }
 .prev:hover, .next:hover {
     background-color: rgba(0,0,0,0.8);
@@ -170,6 +171,7 @@ input{
 .slideshow {
     position: relative;
     margin: auto;
+    width: 90%;
 }
 .fade {
     -webkit-animation-name: fade;
@@ -206,10 +208,9 @@ li a,select,button {
 li a:hover:not(.active) {
     background-color: lightgrey;
 }
-
 .open-button {
-    background-color: rgb(243, 135, 46);
-    color: white;
+    background-color:  black;
+    color: rgb(253, 184, 56);
     padding: 16px 20px;
     border: none;
     cursor: pointer;
@@ -220,6 +221,7 @@ li a:hover:not(.active) {
     width: 200px;
     border-radius: 20px;
     font-size: 12px;
+    font-weight: bold;
 }
 /* The popup chat - hidden by default */
 .chat-popup {
@@ -230,14 +232,13 @@ li a:hover:not(.active) {
     border: 3px solid #f1f1f1;
     border-radius: 20px;
     z-index: 9;
+    width: 20%;
 }
 /* Add styles to the form container */
 .form-container {
-    max-width: 300px;
     padding: 10px;
     background-color: white;
     border-radius: 20px;
-    
 }
 /* Full-width textarea */
 .form-container textarea {
@@ -277,38 +278,103 @@ li a:hover:not(.active) {
     opacity: 1;
 }
 .main{
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
-}
-.section1{
     display: flex;
+    width: 90%;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
 }
+/* section : image area*/
 #sectionimg1{
-    flex-grow: 1;
-    width: 700px;
-    height: 700px;
-    float: left;
+    width: 100%;
+    height: auto;
 }
+/* section : text area*/
 #sectiontxt1{
-    flex-grow: 1;
-    font-size: 50px;
+    font-size: 5vw;
     text-align: center;
     justify-content: center;
+    font-weight: bold;
+    width: 100%;
+    height: auto;
 }
-.section2{
+.subfooter{
+    background-color: #ebedee;
+    width: 100%;
+    margin-top: 25px;  
+    font-weight: lighter;
+}
+.subfoo{
+    width: 80%;
+    margin: auto;
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+.story{
     display: flex;
 }
-#sectionimg2{
-    flex-grow: 1;
-    width: 700px;
-    height: 500px;
-    float: right;
+.story p{
+    padding: 10px;
+    text-align: justify;
+    width: 50%;
 }
-#sectiontxt2{
-    flex-grow: 1;
+.title{
+    display: flex;
 }
-
+.title p{
+    padding: 15px;
+    font-weight: bold;
+    font-size: 18px;
+    width: 50%;
+}
+.bottom{
+    background-color: rgb(253, 184, 56);
+    width: 100%;
+    height: auto;
+    display: block;
+    font-size: 30px;
+    font-weight: bold;
+}
+.codepromo{
+    display: flex;
+    width: 80%;
+    margin: auto;
+    padding : 30px 0px 30px 0px;
+    align-items: center;
+    justify-content: space-between;
+}
+.codepromo2{
+    display: flex;
+}
+#email{
+    display: block;
+    border: 1px solid black;
+    background-color: white;
+    width: 200px;
+    height: 40px;
+    padding-left: 5px;
+}
+.submitemail{
+    border: 1px solid black;
+    height: 42px;
+    width: 42px;
+    background-color: black;
+    color: white;
+}
+.foo{
+    width: 100%;
+    margin: auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    
+}
+.boxes{
+    display: flex;
+    width: 80%;
+    margin: auto;
+    justify-content: space-around;
+    line-height: 30px;
+}
 
 /* 
 Tariq Ali Changes 
