--- a/khaproject/index1.css
+++ b/khaproject/index1.css
@@ -12,7 +12,8 @@
     background-color: #fff;
     width: 100%;  
     align-items: center;
-    display: inline-flex;
+    display: flex;
+    justify-content: space-between;
 }
 .stickyheader{
     position: sticky;
@@ -30,9 +31,24 @@
 .mode{
     display: flex;
     background-color: white;
-    justify-content: flex-end;
+    justify-content: space-between;
     padding: 5px;
 }
+.smode{
+    display: flex;
+    width: 70%;
+}
+.smenu{
+    display: flex;
+    justify-content: flex-end;
+    width: 30%;
+    align-items: center;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 13px;
+    text-decoration: none;
+    padding-left: 10px;
+}
+
 #light{
     background-color: white;
     color: black;
@@ -56,23 +72,17 @@
     height: 120px;
 }
 .logo{
-    width: 20%;
+    width: 25%;
 }
 .header {
     background-color: #fff;
     font-family: Helvetica, Arial, sans-serif;
-    font-size: 20px;
+    font-size: 14px;
     display: flex;
+    justify-content: space-around;
     align-items: center;
-    width: 45%;
-}
-.subheader {
-    align-items: center;
-    background-color: #fff;
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 15px;
-    display: flex;
-    width: 15%;
+    padding-right: 20px;
+    width: 55%;
 }
 .searchArea{
     padding-top: 50px;
@@ -303,6 +313,7 @@ li a:hover:not(.active) {
     width: 100%;
     margin-top: 25px;  
     font-weight: lighter;
+    margin: auto;
 }
 .subfoo{
     width: 80%;
@@ -334,6 +345,7 @@ li a:hover:not(.active) {
     display: block;
     font-size: 30px;
     font-weight: bold;
+    margin: auto;
 }
 .codepromo{
     display: flex;
