--- a/style/register.css
+++ b/style/register.css
@@ -172,7 +172,15 @@ li {
 
 li a,
 select,
-button,
+button {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    background-color: white;
+    border: none;
+}
 .HOME, .CLOTHES, .SHOES, .ACCESSORIES {
     display: block;
     color: black;
@@ -211,28 +219,23 @@ body {
 
 
 /* The popup chat - hidden by default */
-
 .chat-popup {
     display: none;
     position: fixed;
     bottom: 0;
     right: 15px;
     border: 3px solid #f1f1f1;
+    border-radius: 20px;
     z-index: 9;
+    width: 20%;
 }
-
-
 /* Add styles to the form container */
-
 .form-container {
-    max-width: 300px;
     padding: 10px;
     background-color: white;
+    border-radius: 20px;
 }
-
-
 /* Full-width textarea */
-
 .form-container textarea {
     width: 80%;
     padding: 15px;
@@ -240,42 +243,32 @@ body {
     border: none;
     background: #f1f1f1;
     resize: none;
-    min-height: 200px;
+    min-height: 100px;
+    border-radius: 20px;
 }
-
-
 /* When the textarea gets focus, do something */
-
 .form-container textarea:focus {
-    background-color: #ddd;
+    background-color: white;
     outline: none;
 }
-
-
 /* Set a style for the submit/send button */
-
 .form-container .btn {
-    background-color: #4CAF50;
+    background-color: #63b666;
     color: white;
     padding: 16px 20px;
     border: none;
+    border-radius: 20px;
     cursor: pointer;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom:10px;
     opacity: 0.8;
 }
-
-
-/* Add a red background color to the cancel button */
-
+/* Add a background color to the cancel button */
 .form-container .cancel {
-    background-color: red;
+    background-color: black;
+    border-radius: 20px;
 }
-
-
 /* Add some hover effects to buttons */
-
-.form-container .btn:hover,
-.open-button:hover {
+.form-container .btn:hover, .open-button:hover {
     opacity: 1;
 }
