--- a/khaproject/cart.css
+++ b/khaproject/cart.css
@@ -430,3 +430,497 @@ ul li:hover ul li {
         opacity: 1.0;
     }
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+.container {
+    display: grid;
+    margin-bottom: 20px;
+}
+
+.myheader {
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin: auto;
+    justify-content: space-between;
+}
+
+.stickyheader {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+
+.banner {
+    background-color: black;
+    text-align: center;
+    color: orange;
+    font-size: 15px;
+    padding: 5px;
+    font-weight: bold;
+}
+
+.mode {
+    display: flex;
+    background-color: white;
+    justify-content: flex-end;
+    padding: 5px;
+}
+
+#light {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    border-radius: 15px;
+    width: 45px;
+    height: fit-content;
+    padding: 0;
+}
+
+#dark {
+    background-color: black;
+    color: white;
+    border: 1px solid black;
+    border-radius: 15px;
+    width: 45px;
+    height: fit-content;
+    padding: 0;
+}
+
+#logo {
+    width: 140px;
+    height: 120px;
+    float: left;
+    position: relative;
+}
+
+.logo {
+    flex-grow: 1;
+}
+
+.header {
+    background-color: #fff;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 20px;
+    flex-grow: 1;
+}
+
+.subheader {
+    background-color: #fff;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 15px;
+}
+
+.searchArea {
+    padding-top: 30px;
+}
+
+#searchForm {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: all 1s;
+    width: 50px;
+    height: 50px;
+    background: white;
+    box-sizing: border-box;
+    border-radius: 25px;
+    border: 4px solid white;
+    padding: 5px;
+}
+
+input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    ;
+    height: 42.5px;
+    line-height: 30px;
+    outline: 0;
+    border: 1px solid orange;
+    display: none;
+    font-size: 1em;
+    border-radius: 20px;
+    padding: 0 20px;
+}
+
+.fa {
+    box-sizing: border-box;
+    padding: 10px;
+    width: 42.5px;
+    height: 42.5px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 50%;
+    color: #07051a;
+    text-align: center;
+    font-size: 1.2em;
+    transition: all 1s;
+}
+
+#searchForm:hover {
+    width: 200px;
+    cursor: pointer;
+}
+
+#searchForm:hover input {
+    display: block;
+}
+
+#searchForm:hover .fa {
+    background: #07051a;
+    color: white;
+}
+
+.bigimage {
+    width: 1365px;
+    height: 800px;
+}
+
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: right;
+}
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.slideshow {
+    position: relative;
+    margin: auto;
+}
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+ul {
+    list-style-type: none;
+}
+
+li {
+    float: left;
+}
+
+.header li {
+    padding-right: 25px;
+}
+
+li a,
+select,
+button {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    background-color: white;
+    border: none;
+}
+
+li a:hover:not(.active) {
+    background-color: lightgrey;
+}
+
+.open-button {
+    background-color: rgb(243, 135, 46);
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    position: fixed;
+    bottom: 23px;
+    right: 28px;
+    width: 200px;
+    border-radius: 20px;
+    font-size: 12px;
+}
+
+
+/* The popup chat - hidden by default */
+
+.chat-popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    right: 15px;
+    border: 3px solid #f1f1f1;
+    border-radius: 20px;
+    z-index: 9;
+}
+
+
+/* Add styles to the form container */
+
+.form-container {
+    max-width: 300px;
+    padding: 10px;
+    background-color: white;
+    border-radius: 20px;
+}
+
+
+/* Full-width textarea */
+
+.form-container textarea {
+    width: 80%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
+    resize: none;
+    min-height: 100px;
+    border-radius: 20px;
+}
+
+
+/* When the textarea gets focus, do something */
+
+.form-container textarea:focus {
+    background-color: white;
+    outline: none;
+}
+
+
+/* Set a style for the submit/send button */
+
+.form-container .btn {
+    background-color: #63b666;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom: 10px;
+    opacity: 0.8;
+}
+
+
+/* Add a background color to the cancel button */
+
+.form-container .cancel {
+    background-color: black;
+    border-radius: 20px;
+}
+
+
+/* Add some hover effects to buttons */
+
+.form-container .btn:hover,
+.open-button:hover {
+    opacity: 1;
+}
+
+.main {
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
+
+.section1 {
+    display: flex;
+}
+
+#sectionimg1 {
+    flex-grow: 1;
+    width: 700px;
+    height: 700px;
+    float: left;
+}
+
+#sectiontxt1 {
+    flex-grow: 1;
+    font-size: 50px;
+    text-align: center;
+    justify-content: center;
+}
+
+.section2 {
+    display: flex;
+}
+
+#sectionimg2 {
+    flex-grow: 1;
+    width: 700px;
+    height: 500px;
+    float: right;
+}
+
+#sectiontxt2 {
+    flex-grow: 1;
+}
+
+
+/* 
+Tariq Ali Changes 
+*/
+
+.categories {
+    text-align: center;
+    padding: 20px;
+    margin: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.categories div {
+    border: 1px solid black;
+    padding: 10px;
+    border-radius: 30px;
+}
+
+.prodSize {
+    width: auto;
+    height: auto;
+}
+
+ul li ul li {
+    list-style-type: none;
+    display: none;
+}
+
+ul li:hover ul li {
+    list-style-type: none;
+    display: block;
+}
+
+.card {
+    position: relative;
+    overflow: hidden;
+}
+
+.card:before {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 220%;
+    top: -50%;
+    left: -100%;
+    z-index: 1;
+    background-color: rgba(61, 230, 108, 0.387);
+    transform: rotate(0deg);
+    transform-origin: center top 2;
+    transition: .5s;
+}
+
+.card:hover::before {
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+}
+
+.card img {
+    width: 100%;
+    height: auto;
+}
+
+.card-text {
+    width: 100%;
+    padding: 0 20px;
+    position: absolute;
+    top: -100%;
+    background-color: rgba(255, 255, 255, 0.592);
+    color: rgb(8, 1, 1);
+    left: 0;
+    z-index: 1;
+    transition: 1.1s;
+}
+
+.card:hover .card-text {
+    top: 100px;
+}
+
+.btn-success:hover {
+    background-color: rgb(189, 90, 90);
+    color: chocolate;
+}
+
+.blink {
+    animation-name: blinker;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+.blink:hover {
+    animation-play-state: paused;
+    cursor: pointer;
+}
+
+.spanBlink {
+    font-size: 20px;
+    background-color: rgba(61, 230, 108, 0.387);
+}
+
+@keyframes blinker {
+    0% {
+        opacity: 1.0;
+    }
+    50% {
+        opacity: 0.0;
+    }
+    100% {
+        opacity: 1.0;
+    }
+}
