Cart page has been added

--- a/style/cart.css
+++ b/style/cart.css
@@ -1,3 +1,74 @@
+/*------cart Items ---*/
+
+.cart-page {
+    margin: 80px 80px auto;
+    align-items: center;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.cart-info {
+    direction: flex;
+    flex-wrap: wrap;
+    font-size: 12pt;
+}
+
+.cart-info img {
+    height: 100px;
+    width: 100px;
+}
+
+th {
+    padding: 5px;
+    color: black;
+    background: #ebedee;
+    font-size: 16pt;
+    text-align: center;
+}
+
+td {
+    padding: 10px 5px;
+}
+
+td input {
+    width: 40px;
+    height: 30px;
+    padding: 5px;
+}
+
+td a {
+    color: #7a7f81;
+    font-size: 16px;
+}
+
+td img {
+    width: 80px;
+    height: 80px;
+    margin-right: 10px;
+}
+
+.total-price {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.total-price table {
+    border-top: 3px solid#7a7f81;
+    width: 100%;
+    max-width: 350px;
+}
+
+td:last-child {
+    text-align: right;
+}
+
+th:last-child {
+    text-align: right;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -59,110 +130,10 @@
     margin: auto;
 }
 
-* {
-    box-sizing: border-box;
-}
-
-body {
-    background: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-width: 100vh;
-    margin: 0;
-}
-
-.forms {
-    background-color: lightgray;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    overflow: hidden;
-    width: 400px;
-    max-width: 100%;
-}
-
-.form-header {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #F0F0F0;
-    padding: 20px 40px;
-}
-
-.form-header h2 {
-    margin: 0;
-}
-
-form {
-    padding: 30px 40px;
-}
-
-.form-control {
-    margin-bottom: 10px;
-    padding-bottom: 20px;
-    position: relative;
-}
-
-.form-control label {
-    display: inline-block;
-    margin-bottom: 5px;
-}
-
-.form-control input {
-    border: 2px solid #f0f0f0;
-    border-radius: 4px;
-    display: block;
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    padding: 10px;
-    width: 100%;
-}
-
-.form-control.success input {
-    border-color: #2ecc71;
-}
-
-.form-control.error input {
-    border-color: #e74c3c;
-}
-
-.form-control i {
-    position: absolute;
-    top: 40px;
-    right: 10px;
-    visibility: hidden;
-}
-
-.form-control.success i.fa-check-circle {
-    columns: #2ecc71;
-    visibility: visible;
-}
-
-.form-control.error i.fa-exclamation-circle {
-    columns: #e74c3c;
-    visibility: visible;
-}
-
-.form-control small {
-    visibility: hidden;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-}
-
-.form-control.error small {
-    color: #e74c3c;
-    visibility: visible;
-}
-
-.forms button {
-    background-color: #f7f7f7;
-    border: 2px solid #f7f7f7;
-    border-radius: 4px;
-    color: black;
-    display: block;
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 16px;
-    padding: 10px;
-    width: 100%;
+.bigimage,
+img {
+    width: auto;
+    height: 600px;
 }
 
 .text {
@@ -199,6 +170,11 @@ form {
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
+}
+
+.slideshow {
+    position: relative;
+    margin: auto;
 }
 
 .fade {
@@ -453,8 +429,4 @@ ul li:hover ul li {
     100% {
         opacity: 1.0;
     }
-}
-
-#email {
-    width: 100%;
 }
